# docs/swagger.json
@@ -15,8 +15,78 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:1136",
+    "host": "localhost:1140",
     "paths": {
+        "/authentication/signin-as-volunteer": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/authentication/signup-as-volunteer": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.VolunteerRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/change-forgotten-password": {
             "post": {
                 "consumes": [
@@ -93,24 +163,21 @@
                 }
             }
         },
-        "/signin": {
+        "/ivents/create-ivent": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "parameters": [
-                    {
-                        "description": "body json",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.LoginRequest"
-                        }
-                    }
+                "tags": [
+                    "ivent"
                 ],
                 "responses": {
                     "200": {
@@ -128,7 +195,135 @@
                 }
             }
         },
-        "/signin-as-volunteer": {
+        "/ivents/delete-ivent": {
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ivent"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ivents/get-ivent-by-id": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ivent"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ivents/get-ivents": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ivent"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ivents/update-ivent": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ivent"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/signin": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -138,7 +333,7 @@
                 ],
                 "parameters": [
                     {
-                        "description": "query params",
+                        "description": "body json",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -198,13 +393,21 @@
                 }
             }
         },
-        "/signup-as-volunteer": {
-            "post": {
+        "/user/change-password": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "user"
                 ],
                 "parameters": [
                     {
@@ -213,7 +416,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.VolunteerRequest"
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.Password"
                         }
                     }
                 ],
@@ -221,7 +424,56 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.SuccessResponse"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/edit-profile": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Orken1119_Register_internal_models.VolunteerPersonalData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "default": {
@@ -373,6 +625,29 @@
                 }
             }
         },
+        "github_com_Orken1119_Register_internal_models.VolunteerPersonalData": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "skills": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_Orken1119_Register_internal_models.VolunteerRequest": {
             "type": "object",
             "properties": {
@@ -385,9 +660,6 @@
                 "email": {
                     "type": "string"
                 },
-                "information": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -396,9 +668,6 @@
                 },
                 "phoneNumber": {
                     "type": "string"
-                },
-                "roleId": {
-                    "type": "integer"
                 },
                 "skills": {
                     "type": "string"
