# internal/controller/auth_controller/auth/signup-as-volunteer.go
@@ -14,7 +14,7 @@ import (
 // @Param request body models.VolunteerRequest true "query params"
 // @Success 200 {object} models.SuccessResponse
 // @Failure default {object} models.ErrorResponse
-// @Router /signup-as-volunteer [post]
+// @Router /authentication/signup-as-volunteer [post]
 func (vc AuthController) SignupAsVolunteer(c *gin.Context) {
 	var request models.VolunteerRequest
 	if err := c.ShouldBind(&request); err != nil {
