# internal/controller/auth_controller/ivent/get-ivent-by-id.go
@@ -1,0 +1,50 @@
+package auth
+
+import (
+	"net/http"
+	"strconv"
+
+	models "github.com/Orken1119/Register/internal/models"
+	"github.com/gin-gonic/gin"
+)
+
+// @Tags		ivent
+// @Accept		json
+// @Produce	json
+// @Security Bearer
+// @Success	200		{object}	models.SuccessResponse
+// @Failure	default	{object}	models.ErrorResponse
+// @Router		/ivents/get-ivent-by-id [get]
+func (av *IventController) GetIventById(c *gin.Context) {
+	idVal := c.Param("id")
+	id, err := strconv.Atoi(idVal)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "ERROR_GET_IVENT",
+					Message: "incorrect id format",
+					Metadata: models.Properties{
+						Properties1: err.Error(),
+					},
+				},
+			},
+		})
+		return
+	}
+
+	ivent, err := av.IventRepository.GetIventById(c, id)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "IVENT_ERROR",
+					Message: "Error to get all ivents",
+				},
+			},
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, models.SuccessResponse{Result: ivent})
+}
