# internal/controller/auth_controller/ivent/update-ivent.go
@@ -1,0 +1,48 @@
+package auth
+
+import (
+	"net/http"
+
+	models "github.com/Orken1119/Register/internal/models"
+	"github.com/gin-gonic/gin"
+)
+
+// @Tags		ivent
+// @Accept		json
+// @Produce	json
+// @Security Bearer
+// @Success	200		{object}	models.SuccessResponse
+// @Failure	default	{object}	models.ErrorResponse
+// @Router		/ivents/update-ivent [put]
+func (av *IventController) UpdateIvent(c *gin.Context) {
+	var ivent models.Ivent
+
+	err := c.ShouldBind(&ivent)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "ERROR_BIND_JSON",
+					Message: "Datas dont match with struct of signin",
+				},
+			},
+		})
+		return
+	}
+
+	err = av.IventRepository.UpdateIvent(c, &ivent)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "IVENT_ERROR",
+					Message: "Error to create ivent",
+				},
+			},
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, models.SuccessResponse{Result: ivent})
+
+}
