# internal/controller/router.go
@@ -10,6 +10,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 
 	"github.com/Orken1119/Register/internal/controller/auth_controller/auth"
+	"github.com/Orken1119/Register/internal/controller/auth_controller/ivent"
 	"github.com/Orken1119/Register/internal/controller/auth_controller/middleware"
 	"github.com/Orken1119/Register/internal/controller/auth_controller/user"
 	repository "github.com/Orken1119/Register/internal/repositories"
@@ -26,6 +27,10 @@ func Setup(app pkg.Application, router *gin.Engine) {
 		UserRepository: repository.NewUserRepository(db),
 	}
 
+	iventController := &ivent.IventController{
+		IventRepository: repository.NewIventRepository(db),
+	}
+
 	// CORS settings
 	router.Use(cors.New(cors.Config{
 		AllowOrigins:     []string{"*"}, // Укажите URL вашего фронтенда
@@ -36,9 +41,13 @@ func Setup(app pkg.Application, router *gin.Engine) {
 		MaxAge:           12 * time.Hour,
 	}))
 
+	authenticationRouter := router.Group("/authentication")
+	{
+		authenticationRouter.POST("/signup-as-volunteer", loginController.SignupAsVolunteer)
+		authenticationRouter.POST("/signin-as-volunteer", loginController.SigninAsVolunteer)
+	}
+
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	router.POST("/signin-as-volunteer", loginController.SigninAsVolunteer)
-	router.POST("/signup-as-volunteer", loginController.SignupAsVolunteer)
 	router.POST("/forgot-password", loginController.ForgotPassword)
 	router.POST("/change-forgotten-password", loginController.ChangeForgottenPassword)
 	router.POST("/signup", loginController.Signup)
@@ -49,9 +58,17 @@ func Setup(app pkg.Application, router *gin.Engine) {
 	userRouter := router.Group("/user")
 	{
 		userRouter.GET("/profile", userController.GetProfile)
-		userRouter.POST("/edit-profile", userController.EditPersonalData)
+		userRouter.PUT("/edit-profile", userController.EditPersonalData)
 		userRouter.PUT("/change-password", userController.ChangePassword)
+	}
 
+	iventRouter := router.Group("/ivents")
+	{
+		iventRouter.POST("/create-ivent", iventController.CreateIvent)
+		iventRouter.GET("/get-ivents", iventController.GetAllIvent)
+		iventRouter.GET("/get-ivent-by-id", iventController.GetIventById)
+		iventRouter.PUT("/update-ivent", iventController.UpdateIvent)
+		iventRouter.DELETE("/delete-ivent", iventController.DeleteIvent)
 	}
 
 }
